# emcg-trab02

./: CMakeLists.txt  LEIAME.txt
cmake/: macros.cmake
data/: regras.txt
include/: CMakeLists.txt
include/argparser/: argparser.h
include/seega/: board.h  game.h
src/: CMakeLists.txt
src/argparser/: README.rst  argparser.cpp
src/seega/: board.cpp  game.cpp
tests/: CMakeLists.txt
tests/seega/: seega_test.cpp
vis/: CMakeLists.txt
vis/app/: CMakeLists.txt
vis/app/seega/: CMakeLists.txt  seega.cpp
vis/include/: CMakeLists.txt
vis/include/seega/: gboard.h  graphicscontroller.h  igraphics.h  imouselistener.h  mousecontroller.h
vis/src/: CMakeLists.txt
vis/src/seega/: CMakeLists.txt  gboard.cpp
